--- a/index.html
+++ b/index.html
@@ -79,22 +79,22 @@
         </form>
     </footer>
     <script>
-         function deleteArticle(articleID) {
+         function deleteProduct(articleID) {
             console.log('delete student', articleID);
             // debugger
             axios.delete(`https://news-api-test-1.onrender.com/delete_article/${articleID}`)
         }
 
-        axios.get('https://news-api-test-1.onrender.com//article').then(res => {
+        axios.get('http://127.0.0.1:9000/products').then(res => {
             console.log(res.data);
-            const articles = res.data
-            const resultHTML = articles.map(article => `<div class="col-sm-4">
+            const products = res.data
+            const resultHTML = products.map(product => `<div class="col-sm-4">
                 <div class="panel panel-primary">
-                    <div class="panel-heading">${article.title}</div>
-                    <div class="panel-body"><img src="${article.image}" class="img-responsive"
+                    <div class="panel-heading">${product.name} - ${product.category}</div>
+                    <div class="panel-body"><img src="${product.image}" class="img-responsive"
                             style="width:100%" alt="Image"></div>
-                    <div class="panel-footer">${article.content}</div>
-                    <button class="btn btn-danger" onclick="deleteArticle(${article.id})">DELETE</button>
+                    <div class="panel-footer">${product.price} - stock: ${product.stock} </div>
+                    <button class="btn btn-danger" onclick="deleteProduct(${product.id})">DELETE</button>
                 </div>
             </div>`).join('');
             articlerow.innerHTML = resultHTML;
