--- a/index.html
+++ b/index.html
@@ -91,8 +91,10 @@
             const resultHTML = products.map(product => `<div class="col-sm-4">
                 <div class="panel panel-primary">
                     <div class="panel-heading">${product.name} - ${product.category}</div>
-                    <div class="panel-body"><img src="${product.image}" class="img-responsive"
-                            style="width:100%" alt="Image"></div>
+                    <div class="panel-body">
+                        <img src="${product.image}" class="img-responsive"
+                            style="width:100%" alt="Image">
+                        </div>
                     <div class="panel-footer">${product.price} - stock: ${product.stock} </div>
                     <button class="btn btn-danger" onclick="deleteProduct(${product.id})">DELETE</button>
                 </div>
